--- a/site/package.json
+++ b/site/package.json
@@ -1,49 +1,40 @@
 {
-  "name": "Portfolio",
+  "name": "angularapp",
   "version": "1.0.0",
-  "description": "project description",
-  "main": "gulpfile.js",
+  "description": "A basic Angular setup using gulp.",
+  "main": "\u001b ",
   "scripts": {
-    "test": "echo \\\"NPM Setup Test\\\" && exit 1"
+    "test": " "
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:TannerWoodworth/portfolio2.0.git"
+    "url": " "
   },
-  "keywords": [
-    "Web",
-    "Developer",
-    "Portfolio"
-  ],
   "author": "Tanner Woodworth",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.11.1",
-    "del": "^2.2.0",
+    "browser-sync": "^2.9.11",
+    "browserify": "^12.0.0",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-consolidate": "^0.1.2",
-    "gulp-cssnano": "^2.1.0",
-    "gulp-error-notifier": "^1.1.0",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-iconfont": "^6.0.0",
-    "gulp-if": "^2.0.0",
+    "del": "^2.2.0",
     "gulp-imagemin": "^2.4.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-less": "^3.0.5",
-    "gulp-less-sourcemap": "^1.4.3",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-preprocess": "^2.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-shell": "^0.5.2",
-    "gulp-uglify": "^1.5.1",
     "imagemin-pngquant": "^4.2.2",
-    "jshint": "^2.9.1",
-    "lodash": "^4.5.1",
-    "path": "^0.12.7",
-    "run-sequence": "^1.1.5",
-    "yargs": "^3.32.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-environments": "^0.1.1",
+    "gulp-jshint": "^1.11.2",
+    "gulp-minify": "0.0.5",
+    "gulp-sass": "^2.1.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-plumber": "^1.0.1",
+    "preprocess": "^3.0.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "angular": "^1.4.7",
+    "angular-animate": "^1.4.7",
+    "angular-aria": "^1.4.7",
+    "angular-material": "^0.11.4",
+    "angular-ui-router": "^0.2.15"
   }
 }
