--- a/site/package.json
+++ b/site/package.json
@@ -15,18 +15,20 @@
   "devDependencies": {
     "browser-sync": "^2.9.11",
     "browserify": "^12.0.0",
-    "gulp": "^3.9.0",
     "del": "^2.2.0",
-    "gulp-imagemin": "^2.4.0",
-    "imagemin-pngquant": "^4.2.2",
+    "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-environments": "^0.1.1",
+    "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^1.11.2",
     "gulp-minify": "0.0.5",
+    "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.4.2",
-    "gulp-plumber": "^1.0.1",
+    "imagemin-pngquant": "^4.2.2",
     "preprocess": "^3.0.2",
+    "sass-loader": "^6.0.3",
+    "susy": "^2.2.12",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
